@@ -25,6 +25,12 @@ namespace TreeControl
         private static readonly string SettingsFileName = Path.Combine(ColossalFramework.IO.DataLocation.localApplicationData, "TreeControl.xml");
 
         /// <summary>
+        /// Gets or sets a value indicating whether the status panel should be shown.
+        /// </summary>
+        [XmlElement("ShowButtons")]
+        public bool ShowButtons { get => StatusPanel.ShowButtons; set => StatusPanel.ShowButtons = value; }
+
+        /// <summary>
         /// Gets or sets a value indicating whether the status panel should use transparent buttons.
         /// </summary>
         [XmlElement("TransparentButtons")]
